added welcome message

--- a/plps/css/global.css
+++ b/plps/css/global.css
@@ -23,6 +23,9 @@ Variables used across the website
 /*************************************
 Header styling
 *************************************/
+.header {
+  font-family: "OmnesHuggies Regular";
+}
 .header .primary-nav {
   background: #E5F8FE;
   height: 130px;
@@ -59,6 +62,9 @@ Header styling
 .header .primary-nav .utility-nav li a:hover {
   text-decoration: underline;
 }
+.header .primary-nav .utility-nav li a.active {
+  color: #d92032;
+}
 .header .primary-nav .utility-nav li.language {
   position: relative;
 }
@@ -86,7 +92,8 @@ Header styling
 .header .primary-nav .main-nav {
   display: block;
   float: right;
-  margin: 20px 0 0 30px;
+  margin: 20px 0 0;
+  clear: right;
 }
 .header .primary-nav .main-nav li {
   list-style: none;
@@ -94,6 +101,7 @@ Header styling
   margin-left: 35px;
 }
 .header .primary-nav .main-nav li a {
+  font-family: "OmnesHuggiesMedium Regular";
   font-size: 17px;
   color: #0072bc;
   text-decoration: none;
@@ -112,19 +120,30 @@ Header styling
   overflow: initial;
   margin: 0;
   padding: 0;
+  -webkit-box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.1);
 }
-.header .sub-nav a {
+.header .sub-nav a,
+.header .sub-nav p {
   font-size: 12px;
   color: #666666;
   letter-spacing: 1px;
-  padding: 19px 30px;
+  padding: 20px 30px;
+  margin: 0;
+  line-height: 1;
   display: inline-block;
   border-left: 1px solid #F3F3F3;
   border-right: 1px solid #F3F3F3;
+}
+.header .sub-nav a {
   text-decoration: none;
 }
 .header .sub-nav a:hover {
   color: #00b7f2;
+}
+.header .sub-nav p .points {
+  color: #0072bc;
 }
 .header .sub-nav .close-search {
   padding: 0;
