--- a/plps/sass/partials/layout/_header.scss
+++ b/plps/sass/partials/layout/_header.scss
@@ -4,6 +4,10 @@ Header styling
 
 .header {
 	font-family: "OmnesHuggies Regular";
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
 	.primary-nav {
 		background: #E5F8FE;
 		height: 130px;
