--- a/plps/sass/partials/layout/_header.scss
+++ b/plps/sass/partials/layout/_header.scss
@@ -3,7 +3,7 @@ Header styling
 *************************************/
 
 .header { 
-	font-family: "OmnesHuggies Regular";
+	font-family: "OmnesHuggies";
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -94,7 +94,7 @@ Header styling
 				margin-left: 35px;
 
 				a {
-					font-family: "OmnesHuggiesMedium Regular";
+					font-family: "OmnesHuggiesMedium";
 					font-size: 17px;
 					color: #0072bc;
 					text-decoration: none;
