--- a/plps/css/global.css
+++ b/plps/css/global.css
@@ -64,7 +64,7 @@ Variables used across the website
 Header styling
 *************************************/
 .header {
-  font-family: "OmnesHuggies Regular";
+  font-family: "OmnesHuggies";
   position: fixed;
   top: 0;
   left: 0;
@@ -146,7 +146,7 @@ Header styling
   margin-left: 35px;
 }
 .header .primary-nav .main-nav li a {
-  font-family: "OmnesHuggiesMedium Regular";
+  font-family: "OmnesHuggiesMedium";
   font-size: 17px;
   color: #0072bc;
   text-decoration: none;
@@ -364,14 +364,43 @@ footer .footer-links ul li a {
   color: #012d74;
   font-family: "OmnesHuggiesMedium";
 }
+footer .footer-links ul li a:hover {
+  color: #8cb6e0;
+}
 footer .footer-links ul.inline li {
-  margin: 16px 16px 0 0;
+  margin: 0 16px 16px 0px;
+}
+footer .footer-links .button {
+  background: #ffffff;
+  border: 2px solid #00b7f2;
+  font-size: 12px;
+  color: #00b7f2;
+  padding: 11px 16px;
+  font-family: "OmnesHuggiesMedium";
+}
+footer .footer-links .button:hover {
+  background: #00b7f2;
+  color: #ffffff;
 }
 footer .footer-info {
   background: #eaf7fe;
 }
 footer .footer-info .footer-info-header {
   background: #d5f0fc;
+  margin-top: 40px;
+}
+footer .footer-info .footer-info-header a {
+  margin-left: 25px;
+}
+footer .footer-info .footer-info-header a img {
+  margin-top: 12px;
+}
+footer .footer-info .footer-info-header p {
+  font-size: 13px;
+  font-family: "OmnesHuggiesSemiBold";
+  padding: 15px 0;
+  margin: 0;
+  color: #012d74;
 }
 footer .footer-info .footer-info-body {
   padding: 40px 0;
@@ -380,4 +409,13 @@ footer .footer-info .footer-info-body p {
   font-size: 11px;
   font-family: "OmnesHuggiesMedium";
   margin: 8px 0;
+}
+footer .footer-info .footer-info-body .copyright a {
+  margin-right: 25px;
+}
+footer .footer-info .footer-info-body .copyright img {
+  vertical-align: bottom;
+}
+footer .footer-info .footer-info-body .copyright p {
+  margin-top: 30px;
 }
