--- a/plps/sass/partials/layout/_footer.scss
+++ b/plps/sass/partials/layout/_footer.scss
@@ -16,7 +16,7 @@ footer {
 			font-family: "OmnesHuggiesSemiBold";
 		}
 		ul {
-			li {
+			li { 
 				a {
 					font-size: 13px;
 					color: #012d74;
@@ -50,12 +50,11 @@ footer {
 		background: #eaf7fe;
 		.footer-info-header {
 			background: #d5f0fc;
-			margin-top: 40px;
+			margin-top: 25px;
 			a {
 				margin-left: 25px;
-				img {
-					margin-top: 12px;
-				}
+				display: inline-block;
+				margin-top: 12px;
 			}
 			p {
 				font-size: 13px;
@@ -64,9 +63,12 @@ footer {
 				margin: 0;
 				color: #012d74;
 			}
+			.sprite-huggies_logo_footer {
+				margin-top: -20px;
+			}
 		}
 		.footer-info-body {
-			padding: 40px 0;
+			padding: 30px 0;
 			p {
 				font-size: 11px;
 				font-family: "OmnesHuggiesMedium";
@@ -80,7 +82,7 @@ footer {
 					vertical-align: bottom;
 				}
 				p {
-					margin-top: 30px;
+					margin: 25px 0 12px;
 				}
 			}
 		}
