--- a/plps/css/global.css
+++ b/plps/css/global.css
@@ -4,60 +4,105 @@ Main sass file used for imports
 /*************************************
 Variables used across the website
 *************************************/
-.sprite-sprite, .sprite-close, .sprite-facebook, .sprite-google, .sprite-instagram, .sprite-pinterest, .sprite-search_icon, .sprite-twitter, .sprite-youtube {
-  background-image: url('../img/sprite-s5fe69d581e.png');
+.sprite-sprite, .sprite-adchoices, .sprite-close, .sprite-facebook, .sprite-google, .sprite-huggies_logo_footer, .sprite-instagram, .sprite-pinterest, .sprite-pullups_logo_footer, .sprite-search_icon, .sprite-twitter, .sprite-youtube {
+  background-image: url('../img/sprite-sfbfe2477de.png');
   background-repeat: no-repeat;
 }
 
+.sprite-adchoices {
+  background-position: 0 -41px;
+  height: 15px;
+  width: 75px;
+}
+.sprite-adchoices:hover, .sprite-adchoices.adchoices-hover {
+  background-position: 0 -56px;
+}
+
 .sprite-close {
-  background-position: 0 0;
+  background-position: 0 -71px;
   height: 50px;
   width: 50px;
 }
 .sprite-close:hover, .sprite-close.close-hover {
-  background-position: 0 -50px;
+  background-position: 0 -121px;
 }
 
 .sprite-facebook {
-  background-position: 0 -100px;
+  background-position: 0 -171px;
   height: 32px;
   width: 32px;
+}
+.sprite-facebook:hover, .sprite-facebook.facebook-hover {
+  background-position: 0 -203px;
 }
 
 .sprite-google {
-  background-position: 0 -132px;
+  background-position: 0 -235px;
   height: 32px;
   width: 32px;
+}
+.sprite-google:hover, .sprite-google.google-hover {
+  background-position: 0 -267px;
+}
+
+.sprite-huggies_logo_footer {
+  background-position: 0 -299px;
+  height: 14px;
+  width: 59px;
+}
+.sprite-huggies_logo_footer:hover, .sprite-huggies_logo_footer.huggies_logo_footer-hover {
+  background-position: 0 0;
 }
 
 .sprite-instagram {
-  background-position: 0 -164px;
+  background-position: 0 -313px;
   height: 32px;
   width: 32px;
+}
+.sprite-instagram:hover, .sprite-instagram.instagram-hover {
+  background-position: 0 -345px;
 }
 
 .sprite-pinterest {
-  background-position: 0 -196px;
+  background-position: 0 -377px;
   height: 32px;
   width: 32px;
 }
+.sprite-pinterest:hover, .sprite-pinterest.pinterest-hover {
+  background-position: 0 -409px;
+}
+
+.sprite-pullups_logo_footer {
+  background-position: 0 -441px;
+  height: 27px;
+  width: 53px;
+}
+.sprite-pullups_logo_footer:hover, .sprite-pullups_logo_footer.pullups_logo_footer-hover {
+  background-position: 0 -14px;
+}
 
 .sprite-search_icon {
-  background-position: 0 -228px;
+  background-position: 0 -468px;
   height: 19px;
   width: 18px;
 }
 
 .sprite-twitter {
-  background-position: 0 -247px;
+  background-position: 0 -487px;
   height: 32px;
   width: 32px;
 }
+.sprite-twitter:hover, .sprite-twitter.twitter-hover {
+  background-position: 0 -519px;
+}
 
 .sprite-youtube {
-  background-position: 0 -279px;
+  background-position: 0 -551px;
   height: 32px;
   width: 73px;
+}
+.sprite-youtube:hover, .sprite-youtube.youtube-hover {
+  background-position: 0 -583px;
 }
 
 /*************************************
@@ -387,12 +432,11 @@ footer .footer-info {
 }
 footer .footer-info .footer-info-header {
   background: #d5f0fc;
-  margin-top: 40px;
+  margin-top: 25px;
 }
 footer .footer-info .footer-info-header a {
   margin-left: 25px;
-}
-footer .footer-info .footer-info-header a img {
+  display: inline-block;
   margin-top: 12px;
 }
 footer .footer-info .footer-info-header p {
@@ -402,8 +446,11 @@ footer .footer-info .footer-info-header p {
   margin: 0;
   color: #012d74;
 }
+footer .footer-info .footer-info-header .sprite-huggies_logo_footer {
+  margin-top: -20px;
+}
 footer .footer-info .footer-info-body {
-  padding: 40px 0;
+  padding: 30px 0;
 }
 footer .footer-info .footer-info-body p {
   font-size: 11px;
@@ -417,5 +464,5 @@ footer .footer-info .footer-info-body .copyright img {
   vertical-align: bottom;
 }
 footer .footer-info .footer-info-body .copyright p {
-  margin-top: 30px;
+  margin: 25px 0 12px;
 }
