--- a/plps/sass/partials/layout/_header.scss
+++ b/plps/sass/partials/layout/_header.scss
@@ -18,6 +18,26 @@ Header styling
 	box-shadow: 0 0 29px rgba(0,0,0,.22);
 }
 
+aside {
+	.welcome-message {
+		font-size: 28px;
+		color: #666666;
+		background: #ffffff;
+		padding: 40px 0 35px 30px;
+	}
+	.accordion {
+		.accordion-navigation {
+			& > a {
+				background: #ffffff;
+				color: #113779;
+				font-size: 25px;
+				border-top: 2px solid #d7e4f2;
+				padding: 35px 0 35px 30px;
+			}
+		}
+	}
+}
+
 .header { 
 	.primary-nav {
 		background: #E5F8FE;
@@ -76,10 +96,12 @@ Header styling
 
 					.select-language {
 						position: absolute;
+						z-index: 99;
 						top: -10px;
 						left: -15px;
 						padding: 10px 15px;
-						width: 120px;
+						width: 150px;
+						display: none;
 						background: #ffffff;
 						-webkit-box-shadow: 0px 5px 15px -5px rgba(0,0,0,0.4);
 						-moz-box-shadow: 0px 5px 15px -5px rgba(0,0,0,0.4);
@@ -128,7 +150,6 @@ Header styling
 
 	.sub-nav {
 		background: #ffffff;
-		height: 53px;
 		overflow: initial;
 		margin: 0;
 		padding: 0;
@@ -157,6 +178,7 @@ Header styling
 		}
 
 		p {
+			padding: 16px 30px;
 			.points {
 				color: #0072bc;
 			}
@@ -232,8 +254,7 @@ Header styling
 	}
 
 	.sticky-nav {
-		background: #00b6f0;
-		opacity: 0.9;
+		background: rgba(0, 182, 240, 0.9);
 
 		h2 {
 			color: #ffffff;
@@ -256,8 +277,7 @@ Header styling
 		}
 	}
 	.sticky-nav-links {
-		background: #00b7f2;
-		opacity: 0.9;
+		background: rgba(0, 183, 242, 0.9);
 		ul {
 			padding: 0;
 			margin: 0;
