--- a/plps/sass/partials/layout/_content.scss
+++ b/plps/sass/partials/layout/_content.scss
@@ -21,6 +21,19 @@ ul {
 	}
 }
 
+a {
+	color: #387abe;
+}
+
+.space-v {
+	margin-top: 24px;
+	margin-bottom: 24px;
+}
+
+a.space-v {
+	display: inline-block;
+}
+
 .wrapper {
 	max-width: 1000px;
 	margin: 0 10px;
@@ -29,6 +42,26 @@ ul {
 
 .content {
 	padding: 40px 0;
+}
+
+.button{
+	&.empty {
+		width: auto;
+		display: block;
+		text-align: left;
+		margin: 32px 3%;
+		border: 1px solid #8EB3DA;
+		background: transparent none repeat scroll 0% 0%;
+		color: rgb(1, 45, 116);
+		-moz-transition: background 0.2s ease-in 0s;
+		-webkit-transition: background 0.2s ease-in 0s;
+		-ms-transition: background 0.2s ease-in 0s;
+		-o-transition: background 0.2s ease-in 0s;
+		transition: background 0.2s ease-in 0s;
+		&:hover {
+		    background: rgba(0,0,0,.03);
+		}
+	}
 }
 
 @media screen and (max-width: 640px) {
