--- a/plps/css/global.css
+++ b/plps/css/global.css
@@ -246,17 +246,17 @@ nav.tab-bar .menu-icon span::after {
   background: #ffffff;
 }
 .left-off-canvas-menu .welcome-message {
-  font-size: 28px;
+  font-size: 14px;
   color: #666666;
   background: #ffffff;
-  padding: 40px 0 35px 30px;
+  padding: 20px 0 20px 15px;
 }
 .left-off-canvas-menu .accordion .accordion-navigation > a {
   background: #ffffff;
   color: #113779;
-  font-size: 25px;
+  font-size: 20px;
   border-top: 2px solid #d7e4f2;
-  padding: 35px 30px;
+  padding: 20px 15px;
 }
 .left-off-canvas-menu .accordion .accordion-navigation > a::after {
   content: "\f067";
@@ -274,7 +274,7 @@ nav.tab-bar .menu-icon span::after {
   margin: 0;
 }
 .left-off-canvas-menu .accordion .accordion-navigation .content a {
-  padding: 35px 25px 35px 70px;
+  padding: 16px 15px 16px 35px;
   color: #012d74;
   display: block;
 }
@@ -290,8 +290,8 @@ nav.tab-bar .menu-icon span::after {
   background: #eaf7fe;
 }
 .left-off-canvas-menu .large-menu a {
-  font-size: 25px;
-  padding: 30px 30px;
+  font-size: 14px;
+  padding: 20px;
   color: #012d74;
   display: block;
   border-bottom: 2px solid #d7e4f2;
